--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
+    "react-datepicker": "^7.5.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
